# momoto

./: .gitignore  .prettierignore  .prettierrc.json  ARCHITECTURE_AUDIT_REPORT.md  AUDIT_REPORT.md  AUDIT_REPORT_FINAL_2026.md  CAPABILITY_MAP.md  CHANGELOG.md  CONTRIBUTING.md  CRATE_STATUS.md  CRYSTAL-DESIGN-SYSTEM-2025.md  Cargo.toml  DECISION_EXPLAINABILITY_REPORT.md  FASE_3_COMPLETE.md  FASE_3_PROGRESS.md  IMPLEMENTATION-PHASE2-COMPLETE.md  IMPLEMENTATION-PHASE3-COMPLETE.md  INSTALLATION.md  MOMOTO_AUDIT_REPORT_v1.md  MOMOTO_COMPLETENESS_REPORT.md  MOMOTO_SYSTEM_DISCOVERY_REPORT.md  P6_DOC_REPORT.md  PRE_RELEASE_CHECKLIST.md  PUBLIC_API_CATALOG.md  README.md  RELEASE_READINESS_REPORT.md  RUST_CORE_IMPLEMENTATION_SUMMARY.md  SPRINT_2_DISPERSION_REPORT.md  SPRINT_3_MIE_SCATTERING_REPORT.md  SPRINT_5_DYNAMIC_OPTICS_REPORT.md  STABILITY.md  STORYBOOK_COMPREHENSIVE_AUDIT_2026.md  STORYBOOK_DX_REPORT_2026.md  VALIDATION_REPORT.md  index.ts  package-lock.json  package.json  test-apca-accuracy.js  tsconfig.json  tsup.config.bundled_5etdkxytuq.mjs  (+2 more)
crates/momoto-engine/: Cargo.toml
crates/momoto-engine/src/: lib.rs
crates/momoto-engine/src/batch/: mod.rs
crates/momoto-intelligence/: Cargo.toml
crates/momoto-intelligence/src/: advanced_scoring.rs  constraints.rs  harmony.rs  lib.rs  recommendation.rs  scoring.rs
crates/momoto-materials/: Cargo.toml
crates/momoto-materials/docs/: PBR-PHASE10-REPORT.md  PBR-PHASE12-REPORT.md  PBR-PHASE6-REPORT.md  PBR-STATE-OF-THE-ART.md  TIER-VALIDATION-REPORT.md
crates/momoto-materials/docs/ASSURANCE/: API-CONFORMANCE.md  MATERIAL-INVENTORY.md  VISUAL-PHYSICS-CORRELATION.md
crates/momoto-materials/docs/AUDIT/: API-COVERAGE.md  FINAL-VERDICT.md  MATERIAL-CATALOG-COVERAGE.md
crates/momoto-materials/docs/INTEGRATION/: API-STORYBOOK-ALIGNMENT.md  MATERIALS-COMPLETED.md  STORYBOOK-COMPLETION.md
crates/momoto-materials/src/: blur.rs  glass.rs  lib.rs
crates/momoto-materials/src/glass_physics/: advanced_material_presets.rs  anisotropic.rs  anisotropic_brdf.rs  auto_calibration_realtime.rs  combined_effects_advanced.rs  context.rs  dataset_merl.rs  differentiable_render.rs  dispersion.rs  external_validation.rs  material_fingerprint.rs  material_import.rs  metal_oxidation_dynamic.rs  metal_temp.rs  mie_dynamic.rs  mie_physics.rs  mod.rs  neural_correction.rs  phase10_validation.rs  phase11_validation.rs  phase13_validation.rs  phase15_validation.rs  phase4_validation.rs  phase8_validation.rs  phase9_validation.rs  plasmonic.rs  plugin_api.rs  presets_experimental.rs  reference_renderer.rs  scientific_validation.rs  simd_batch.rs  spectral_error.rs  spectral_optimization.rs  spectral_pipeline.rs  spectral_pipeline_validation.rs  thin_film_dynamic.rs  training_dataset.rs  training_pipeline.rs  transmittance.rs  twin_validation.rs
crates/momoto-materials/src/shadow_engine/: contact_shadow.rs  elevation_shadow.rs
crates/momoto-ui-core/: Cargo.toml  README.md
crates/momoto-ui-core/benches/: performance.rs
crates/momoto-ui-core/src/: a11y.rs  color.rs  lib.rs  state.rs  tokens.rs
crates/momoto-ui-core/tests/: contract_lock_tests.rs  performance_tests.rs  stress_tests.rs
docs/: API.md  (+38 more)
momoto/: .eslintrc.json  API.md  API_AUDIT_FASE1.md  API_STABILITY.md  AUDIT_REPORT_LIQUID_GLASS.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  EVOLUTION_REPORT.md  GOLDEN_VECTOR_VALIDATION.md  MOMOTO_APCA_JOURNEY.md  PUBLIC_API_CATALOG.md  README.md  RELEASE_BASELINE_V6.md  RELEASE_NOTES.md  RUST_BOUNDARY.md  SCIENTIFIC_VALIDATION.md  SECURITY.md  STATUS.md  STRATEGIC_EVOLUTION_FRAMEWORK.md  experimental-api.ts  package.json  public-api.ts  vitest.config.ts
momoto/.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
momoto/__tests__/: apca-accuracy-fix-verification.test.ts  apca-wasm-parity.test.ts
momoto/application/: ContrastDecisionEngine.ts
momoto/application/conformance/: ConformanceEngine.ts
momoto/application/plugins/: PluginManager.ts
momoto/benches/: Cargo.toml
momoto/benches/benches/: contrast_metrics.rs
momoto/benches/src/: lib.rs
momoto/benchmark/: CRITICAL_ANALYSIS.md  METHODOLOGY.md
momoto/benchmark/data/golden-sets/: apca-vectors.ts
momoto/benchmark/suites/: apca-wasm-performance.benchmark.ts  performance.benchmark.ts
momoto/crates/momoto-agent/: Cargo.toml
momoto/crates/momoto-agent/src/: audit.rs  bot_api.rs  certification.rs  contract.rs  executor.rs  experience.rs  lib.rs  material_bridge.rs  orchestration.rs  pipeline.rs  query.rs  reporting.rs  response.rs  session.rs  temporal.rs  visual_generator.rs  workflow.rs
momoto/crates/momoto-audio/: Cargo.toml  README.md
momoto/crates/momoto-audio/src/: domain.rs  lib.rs
momoto/crates/momoto-core/: Cargo.toml
momoto/crates/momoto-core/src/: lib.rs
momoto/crates/momoto-core/tests/: api_exposure.rs  phase5_comprehensive.rs
momoto/crates/momoto-engine/: Cargo.toml  README.md
momoto/crates/momoto-engine/src/: engine.rs  lib.rs
momoto/crates/momoto-events/: Cargo.toml
momoto/crates/momoto-events/src/: broadcaster.rs  event.rs  lib.rs  stream.rs
momoto/crates/momoto-haptics/: Cargo.toml  README.md
momoto/crates/momoto-haptics/src/: domain.rs  energy.rs  lib.rs  mapping.rs  waveform.rs
momoto/crates/momoto-metrics/: Cargo.toml
momoto/crates/momoto-wasm/: Cargo.toml  README.md  package.json
momoto/docs/: ARCHITECTURE.md  CONCEPTS.md  DECISION_LAYER_ARCHITECTURE.md  EVOLUTIONARY_CAPABILITIES.md  GETTING_STARTED.md  wasm_memory_layout.md
momoto/domain/specification/: DECISION_MODEL.md
momoto/examples/: 01_liquid_glass_benchmark.rs  04_backend_swap.rs  05_audio_lufs.rs  06_haptics_feedback.rs  07_multimodal_engine.rs
momoto/infrastructure/adapters/: DesignSystemAdapter.ts  MaterialDesign3Adapter.ts
momoto/infrastructure/audit/: AuditTrailService.ts
momoto/infrastructure/exporters/: BaseExporter.ts  DesignTokensExporter.ts  TailwindExporter.ts
momoto/react/: useColorIntelligence.ts
momoto/rust-wasm-migration/: Cargo.toml  README.md
momoto/rust-wasm-migration/src/: lib.rs
momoto/tests/: Cargo.toml  validate_rust.rs
(+579 files in other folders)
