[workspace]
resolver = "2"
members = [
    "crates/momoto-core",
    "crates/momoto-metrics",
    "crates/momoto-engine",
    "crates/momoto-intelligence",
    "crates/momoto-materials",
    # momoto-prelude: not yet implemented
    # "crates/momoto-prelude",
    "crates/momoto-agent",
    "crates/momoto-events",
    # momoto-cli: not yet implemented
    # "crates/momoto-cli",
    "crates/momoto-wasm",
    # tests/benches: temporarily excluded (depend on momoto-prelude)
    # "tests",
    # "benches",
]

[workspace.package]
version = "7.0.0"
authors = ["Momoto Team"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/momoto/momoto"
homepage = "https://momoto.dev"
description = "Perceptual color intelligence system"
keywords = ["color", "contrast", "accessibility", "perception", "apca"]
categories = ["graphics", "accessibility", "algorithms", "wasm"]

[workspace.dependencies]
# No external dependencies for core - pure Rust
# WASM bindings
wasm-bindgen = "0.2"

# CLI dependencies
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Development dependencies
criterion = "0.5"
proptest = "1.4"

[workspace.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0
debug = true
