[package]
name = "momoto-intelligence"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Intelligence layer - rules, scoring, and recommendation engines"
keywords = ["intelligence", "rules", "scoring", "recommendation"]

[lib]
crate-type = ["rlib"]

[features]
# Enable serde serialization for types (requires serde feature on momoto-core)
default = []

[dependencies]
momoto-core = { path = "../momoto-core" }
momoto-metrics = { path = "../momoto-metrics" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
