[package]
name = "apca_wasm"
version = "0.1.0"
authors = ["Momoto Team"]
edition = "2021"
description = "APCA (Accessible Perceptual Contrast Algorithm) implementation in Rust/WASM"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for small code size and speed
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
# Additional WASM-specific optimizations
wasm-opt = ["-O3", "--enable-mutable-globals"]
