[package]
name = "momoto-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Momoto AI Agent layer (experimental)"

[dependencies]
momoto-core = { path = "../momoto-core" }
momoto-metrics = { path = "../momoto-metrics" }
momoto-intelligence = { path = "../momoto-intelligence" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
