[package]
name = "momoto-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WASM bindings for Momoto Multimodal Perceptual Physics Engine (Color, Audio, Haptics)"
keywords = ["wasm", "color", "audio", "haptics", "multimodal"]
categories = ["wasm", "multimedia", "accessibility", "graphics"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

# ── Mandatory dependencies (always compiled) ──────────────────────────────────
[dependencies]
momoto-core        = { path = "../momoto-core" }
momoto-metrics     = { path = "../momoto-metrics" }
momoto-intelligence = { path = "../momoto-intelligence" }
momoto-materials   = { path = "../momoto-materials" }
momoto-agent       = { path = "../momoto-agent" }
momoto-events      = { path = "../momoto-events" }
momoto-engine      = { path = "../momoto-engine", default-features = false }
wasm-bindgen       = { workspace = true }
js-sys             = "0.3"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
serde-wasm-bindgen = "0.6"

# ── Optional domain dependencies ──────────────────────────────────────────────
# These are gated by feature flags so that each domain can be compiled in/out
# independently without touching any other code.
momoto-audio   = { path = "../momoto-audio",   optional = true }
momoto-haptics = { path = "../momoto-haptics", optional = true }

# ── Optional utilities ────────────────────────────────────────────────────────
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-simd128"]

# ── Feature matrix ────────────────────────────────────────────────────────────
#
# Feature        | Description                          | Adds
# ---------------|--------------------------------------|----------------------------
# color          | Optical domain (OKLCH, HCT, APCA)    | always present (core)
# audio          | Acoustic domain (LUFS, FFT, Mel)     | momoto-audio
# haptics        | Vibrotactile domain (energy, mapping) | momoto-haptics
# multimodal     | All three domains combined            | audio + haptics
# panic_hook     | Browser panic messages via console   | console_error_panic_hook
#
# Default build: color + audio + panic_hook  (covers >95% of real-world usage)
# Minimal build: --no-default-features --features color  (color only, smallest WASM)
# Full build:    --features multimodal                   (all domains)

[features]
default  = ["color", "audio", "panic_hook"]
color    = []                                    # optical domain (core always present)
audio    = ["dep:momoto-audio"]                  # acoustic domain
haptics  = ["dep:momoto-haptics"]                # vibrotactile domain
multimodal = ["color", "audio", "haptics"]       # all domains
panic_hook = ["dep:console_error_panic_hook"]    # browser-friendly panic messages
